--- a/src/css/App.css
+++ b/src/css/App.css
@@ -48,3 +48,8 @@ div.header a:hover {
   padding-left: 5px; 
   margin-left: 5px;
 }
+
+.add-category {
+  cursor: pointer;
+  text-decoration: underline;
+}
