--- a/src/css/App.css
+++ b/src/css/App.css
@@ -57,3 +57,10 @@ div.header a:hover {
 .favorited {
   color: DarkGoldenRod;
 }
+
+.modal-container {
+  position: relative;
+}
+.modal-container .modal, .modal-container .modal-backdrop {
+  position: absolute;
+}
