--- a/src/css/images.scss
+++ b/src/css/images.scss
@@ -100,3 +100,20 @@
 .main-image {
 	position: relative;
 }
+
+.regular-image {
+	transition: all 1s;
+}
+
+.regular-image:hover {
+    transform: scale(1.25);
+}
+
+.backdrop {
+	position: absolute;
+	top: 50px;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+}
